<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>gspn_framework_package</name>
 <version>1.0.0</version>
 <description>A framework to model, execute and visualize multi-robot problems</description>
 <author email="cguerraazevedo@tecnico.ulisboa.pt"></author>
 <maintainer email="cguerraazevedo@tecnico.ulisboa.pt">Pedro Caldeira</maintainer>
 <license>GPLv3</license>

 <buildtool_depend>catkin</buildtool_depend>
 <build_depend>message_generation</build_depend>
 <build_depend>actionlib_msgs</build_depend>
 <build_depend>actionlib</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>rospy</build_depend>

 <exec_depend>actionlib_msgs</exec_depend>
 <exec_depend>actionlib</exec_depend>
 <exec_depend>std_msgs</exec_depend>
 <exec_depend>message_runtime</exec_depend>
 <exec_depend>rospy</exec_depend>

</package>
